// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Title /> should render correctly 1`] = `
<Title__Container
  tagName="h3"
>
  My title
</Title__Container>
`;

exports[`<Title /> should render correctly with other tagName 1`] = `
<Title__Container
  tagName="h2"
>
  My title
</Title__Container>
`;
